--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.md
 include requirements.txt
 include install/*
-recursive-include torrentDownloader *.txt *.yaml 
+recursive-include torrentDownloader *.txt *.yaml *.storage 
 
