--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include README.md
 include requirements.txt
 include install/*
+include screenshot/*
 recursive-include torrentDownloader *.txt *.yaml *.storage 
 
