requests fixed ssl error

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-pypi-publisherpyyamlsimplejsonbs4Clickrequests==2.2.1
+pypi-publisherpyyamlsimplejsonbs4Clickrequests==2.2.1ndg-httpsclient
